Fix control alignment funkiness

--- a/public/scripts/extensions/quick-reply/style.less
+++ b/public/scripts/extensions/quick-reply/style.less
@@ -299,6 +299,7 @@
 						gap: 1em;
 						color: var(--grey70);
 						font-size: smaller;
+						align-items: baseline;
 						> .checkbox_label {
 							white-space: nowrap;
 							> input {
